<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setup_event_info_title"
        style="@style/Text.Light.Heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/kiosk_spacing"
        android:text="@string/event_info_setup__title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/setup_event_info_title"
        android:stretchColumns="1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/kiosk_spacing">

            <TextView
                style="@style/Text.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/kiosk_spacing"
                android:text="@string/event_info_setup__event_title" />

            <EditText
                android:id="@+id/setup_event_info_line_one"
                style="@style/Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/event_info_setup__event_line_one_hint"
                android:inputType="textCapCharacters"
                android:maxLength="24"
                android:padding="@dimen/kiosk_spacing"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/setup_event_info_line_two"
                style="@style/Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/event_info_setup__event_line_two_hint"
                android:inputType="textCapCharacters"
                android:maxLength="24"
                android:padding="@dimen/kiosk_spacing"
                android:textAllCaps="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/kiosk_spacing"
                android:text="@string/event_info_setup__event_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setup_event_info_logo_uri"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/kiosk_spacing"
                    android:ellipsize="start"
                    android:hint="@string/event_info_setup__event_logo_uri_none"
                    android:maxEms="12"
                    android:padding="@dimen/kiosk_spacing"
                    android:singleLine="true" />

                <!-- The icon is set to the same size as the text height -->

                <ImageView
                    android:id="@+id/setup_event_info_logo_clear"
                    android:layout_width="@dimen/text_size_normal"
                    android:layout_height="@dimen/text_size_normal"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_menu_close_clear_cancel"
                    android:visibility="gone" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/kiosk_spacing"
                android:text="@string/event_info_setup__event_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:orientation="horizontal">

                <DatePicker
                    android:id="@+id/setup_event_info_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:spinnersShown="true" />

                <CheckBox
                    android:id="@+id/setup_event_info_date_hidden"
                    style="@style/SmallText.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/kiosk_spacing"
                    android:text="@string/event_info_setup__event_date_hidden" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/setup_event_info_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/kiosk_spacing"
        android:padding="@dimen/kiosk_spacing"
        android:text="@string/setup__button_text_next" />

</RelativeLayout>